# cmake_project1

./: CMakeLists.txt  README.md  hello.cpp  main.cpp
animal/: CMakeLists.txt  Dog.cpp  Dog.h  animal.cmake
animal2/: CMakeLists.txt  Cat.cpp  Cat.h
config/: version.h.in
person/: CMakeLists.txt  Person.cpp  Person.h
utils/: tools.h
